package adapter.yuki.chap01;

public interface Print {
    public abstract void printWeak();
    public abstract void printStrong();
}
